# GHudPokecord

./: .gitignore  Dockerfile.local  Makefile  README.md  docker-compose.yaml
.cargo/: config.toml
pokecord/: PokecordClient.py  __main__.py  pokecord_client.py
pokecord-backend/: Cargo.toml
pokecord-backend/src/: lib.rs  pokedex.rs
pokecord-backend/src/database/: errors.rs  mod.rs
pokecord-backend/src/models/: mod.rs
pokecord-backend/src/pokedex/: api_models.rs  cache.rs  error.rs
pokecord-backend/src/registration/: handlers.rs  mod.rs
pokecord/constants/: types.py
pokecord/utils/: paged_message.py  starters.py
scripts/: start_pokecord_discord.sh
