[package]
name = "pokecord-backend"
version = "0.1.0"
authors = ["Paul Addonizio <pauladdonizio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
mongodb = "1.2"
pyo3-log = "0.3"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.13"
features = ["tokio-runtime", "attributes"]
