[package]
name = "pokecord-backend"
version = "0.1.0"
authors = ["Paul Addonizio <pauladdonizio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3"
log = "0.4"
mongodb = "1.2"
pyo3-log = "0.3"
serde_json = "1.0"
sha3 = "0.9"
thiserror = "1.0"

[dependencies.bytes]
version = "1"
features = ["serde"]

[dependencies.http-cache-semantics]
version = "0.9"
features = ["with_serde", "reqwest"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
version = "0.13"
features = ["tokio-runtime", "attributes"]

[dependencies.reqwest]
version = "0.11.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "fs"]

[dependencies.url]
version = "2.2"
features = ["serde"]

